# vibe-coding-course

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
class1/: GSET Vibe Coding - Intro to Python and Hello World Gemini!.ipynb  README.md  intro_to_gemini.py  requirements.txt
class4/: stt_web_tts.py  web_agent.py
docs/: README.md  antigravity-tips.md
example-projects/: README.md
example-projects/web-browsing-agent/: README.md  agent_utils.py  app.py  requirements.txt  voice_utils.py
example-projects/wordle-game-web/: README.md  app.py  index.html  requirements.txt  script.js  style.css
shared/: .env.example  README.md  requirements.txt
week1/: README.md
week1-foundations-text/: README.md
week1-foundations-text/class02-python-basics/: README.md  git-basics.md  hello_world_gemini.py  intro_to_python.py
week1-foundations-text/class03-text-generation/: intro_to_gemini.py
week1-foundations-text/class04-text-project-workshop/: README.md  world_cup_hype_card.py
week1-foundations-text/class05-function-calling-agents/: .env.example  EXPLANATION.md  README.md  app.py  bill_splitting_agent.py  bill_splitting_web.py  requirements.txt  research_agent_starter.py  test_bill_splitting.py  test_bill_splitting_web.py  test_research.py  test_weather.py  test_wordle.py  tutor_agent_starter.py  weather_agent_starter.py  wordle_agent_starter.py
week2-image-audio/: README.md
week2-image-audio/class07-audio-mcp/: gemini_live.py  requirements.txt  stt_web_tts.py  web_agent.py
week3-multimodal-demos/: README.md
(+39 files in other folders)
